--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/landingpage.css" />
+    <link rel="stylesheet" href="landingpage.css" />
 </head>
 <body>
     <!--sidebar menu-->
@@ -38,7 +38,7 @@
                 telah menempuh banyak tempat tempat pariwisata baik dari dalam pulau dan
                 juga luar pulau.
                 <div class="box2">
-                    <marquee><img class="foto" src="/foto,audio,vedio/mobil.png" alt="keterngan foto" height="200px"/></marquee>
+                    <marquee><img class="foto" src="mobil.png" alt="keterngan foto" height="200px"/></marquee>
                     </div>
         </div>
 
@@ -48,25 +48,25 @@
             <div class="sampingan">
             <div class="box1">
                 <p>
-                    <img src="/foto,audio,vedio/mobil.png" alt=galeri height="100"  />
+                    <img src="mobil.png" alt=galeri height="100"  />
                 </p>
             </div>
             
             <div class="box1">
                 <p>
-                    <img src="/foto,audio,vedio/mobil.png" alt="galeri" height="100" />
+                    <img src="mobil.png" alt="galeri" height="100" />
                 </p>
             </div>
             </div>
             <div class="sampingan">
             <div class="box1">
-                <p><img src="/foto,audio,vedio/mobil.png" alt="galeri" height="100" />
+                <p><img src="mobil.png" alt="galeri" height="100" />
                 </p>
             </div>   
             
             <div class="box1">
                 <p>
-                    <img src="/foto,audio,vedio/mobil.png" alt="galeri"  height="100" />
+                    <img src="mobil.png" alt="galeri"  height="100" />
                 </p>
             </div>
             </div>
@@ -76,7 +76,7 @@
             <div class="Mendukung-Daerah" id="Mendukung-Daerah">
                 <h4 class="mendukung-daerah">Mendukung Daerah</h4>
                 <div class="map">
-                    <img src="/foto,audio,vedio/map.png" height="50px">
+                    <img src="map.png" height="50px">
                     <h4>>Nganjuk Ke Yogyakarta<</h4>
                     <h4>>Nganjuk Ke Bali<</h4>
                     <h4>>Nganjuk Ke Bromo<</h4>
@@ -125,10 +125,10 @@
                 <div class="Testimoni" id="Testimoni">
                     <h4 class="testimoni">Testimoni</h4>
                     <div class="Sampingan">
-                        <img src="/foto,audio,vedio/test.png">
-                        <img src="/foto,audio,vedio/test.png">
-                        <img src="/foto,audio,vedio/test.png">
-                        <img src="/foto,audio,vedio/test.png">
+                        <img src="test.png">
+                        <img src="test.png">
+                        <img src="test.png">
+                        <img src="test.png">
                     </div>
                 </div>
 
